generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ■■ Enums ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■

enum DocumentStatus {
  UPLOADED
  OCR_PENDING
  OCR_DONE
  INDEXED
  ERROR
}

enum DocumentType {
  SUMMONS
  SUBPOENA
  LEGAL_BRIEF
  MEMORANDUM
  MOTION
  COURT_ORDER
  JUDGMENT
  HEARING_TRANSCRIPT
  SERVICE_OF_PROCESS
  APPEAL
  INJUNCTION
  ARBITRATION_AWARD
  MANDATE_CONTRACT
  COMMERCIAL_CONTRACT
  TRANSFER_DEED
  LEASE_AGREEMENT
  NOTARIAL_ACT
  NDA
  SETTLEMENT_AGREEMENT
  ARTICLES_OF_INCORPORATION
  SHAREHOLDER_AGREEMENT
  EMPLOYMENT_CONTRACT
  IDENTITY_DOCUMENT
  COMPANY_REGISTRATION
  POWER_OF_ATTORNEY
  PROOF_OF_ADDRESS
  BANK_CERTIFICATE
  INVOICE
  ESCROW_STATEMENT
  EXPENSE_REPORT
  FINANCIAL_REPORT
  TAX_DECLARATION
  PAYMENT_RECEIPT
  EXHIBIT
  BAILIFF_REPORT
  EXPERT_REPORT
  WRITTEN_TESTIMONY
  PHOTO_VIDEO_EVIDENCE
  COMMUNICATION_RECORDS
  MEDICAL_REPORT
  POLICE_REPORT
  FORMAL_NOTICE
  CLIENT_LETTER
  OPPOSING_PARTY_LETTER
  COURT_CORRESPONDENCE
  ARCHIVED_EMAIL
  REGISTERED_LETTER
  FEE_AGREEMENT
  CLIENT_INTAKE_FORM
  MISSION_AGREEMENT
  INTERNAL_REPORT
  MEETING_MINUTES
  LEGAL_RESEARCH_NOTE
  DOCUMENT_TEMPLATE
  TRADEMARK_FILING
  PATENT
  LICENSE_AGREEMENT
  REGULATORY_AUTHORIZATION
  COMPLIANCE_CERTIFICATE
  OTHER
}

enum Role {
  SUPER_ADMIN
  CABINET_ADMIN
  LAWYER
  ASSISTANT
  SECRETARY
}

enum CaseStatus {
  OPEN
  IN_PROGRESS
  PENDING
  CLOSED
  ARCHIVED
}

enum NotificationLevel {
  NORMAL
  IMPORTANT
  URGENT
}

enum NotificationMotif {
  HEARING
  INTERNAL_MEETING
  DEADLINE
  DOCUMENT_TO_SIGN
  NEW_CLIENT
  INVOICE_PENDING
  LEGAL_UPDATE
  INTERNAL_REMINDER
  CONFLICT_DETECTED
  OTHER
}

// ■■ Core Models ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■

model Tenant {
  id            String             @id @default(uuid())
  name          String
  slug          String             @unique
  plan          String             @default("FREE")
  country       String?
  city          String?
  address       String?
  phone         String?
  fax           String?
  website       String?
  siret         String?
  barNumber     String?            @map("bar_number")
  logoUrl       String?            @map("logo_url")
  isActive      Boolean            @default(true) @map("is_active")
  createdAt     DateTime           @default(now()) @map("created_at")
  updatedAt     DateTime           @updatedAt @map("updated_at")
  users              User[]
  cases              Case[]
  documents          Document[]
  notifications      Notification[]
  deadlines          Deadline[]
  clients            Client[]
  auditLogs          AuditLog[]
  conversations      ChatConversation[]
  invitations        Invitation[]
  notifTemplates     NotificationTemplate[]
  scheduledNotifs    ScheduledNotification[]

  @@map("tenants")
}

model User {
  id                    String         @id @default(uuid())
  tenantId              String         @map("tenant_id")
  email                 String         @unique
  passwordHash          String         @map("password_hash")
  firstName             String         @map("first_name")
  lastName              String         @map("last_name")
  avatarUrl             String?        @map("avatar_url")
  phone                 String?
  role                  Role           @default(LAWYER)
  isActive              Boolean        @default(true) @map("is_active")
  refreshToken          String?        @map("refresh_token")
  refreshTokenExpiresAt DateTime?      @map("refresh_token_expires_at")
  createdAt             DateTime       @default(now()) @map("created_at")
  updatedAt             DateTime       @updatedAt @map("updated_at")
  tenant                Tenant         @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  cases                 Case[]         @relation("CaseAssignee")
  uploadedDocuments     Document[]     @relation("DocumentUploader")
  notificationsCreated  Notification[]           @relation("NotificationCreator")
  notifTemplates        NotificationTemplate[]    @relation("TemplateCreator")
  scheduledNotifs       ScheduledNotification[]   @relation("ScheduledNotifCreator")
  auditLogs             AuditLog[]
  conversations         ChatConversation[]

  @@index([tenantId])
  @@map("users")
}

model Case {
  id          String         @id @default(uuid())
  tenantId    String         @map("tenant_id")
  title       String
  description String?
  clientName  String         @map("client_name")
  courtName   String?        @map("court_name")
  caseNumber  String?        @map("case_number")
  status      CaseStatus     @default(OPEN)
  priority    String         @default("MEDIUM")
  clientId    String?        @map("client_id")
  assigneeId  String?        @map("assignee_id")
  closedAt    DateTime?      @map("closed_at")
  createdAt   DateTime       @default(now()) @map("created_at")
  updatedAt   DateTime       @updatedAt @map("updated_at")
  tenant      Tenant         @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  client      Client?        @relation(fields: [clientId], references: [id], onDelete: SetNull)
  assignee    User?          @relation("CaseAssignee", fields: [assigneeId], references: [id])
  deadlines   Deadline[]
  documents   Document[]
  notifications   Notification[]          @relation("CaseNotifications")
  scheduledNotifs ScheduledNotification[] @relation("CaseScheduledNotifs")

  @@index([tenantId])
  @@map("cases")
}

// ■■ Document Repository ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■

model Document {
  id            String         @id @default(cuid())
  tenantId      String         @map("tenant_id")
  title         String
  file_name     String         @map("file_name")
  file_url      String         @map("file_url")
  file_type     String         @map("file_type")
  file_size     Int            @map("file_size")
  category      String?
  subCategory   String?        @map("sub_category")
  allowedRoles  Role[]         @default([]) @map("allowed_roles")
  type          DocumentType   @default(OTHER)
  status        DocumentStatus @default(UPLOADED)
  uploaderId    String         @map("uploader_id")
  case_id       String?        @map("case_id")
  isPending     Boolean        @default(false) @map("is_pending")
  deletedAt     DateTime?      @map("deleted_at")
  createdAt     DateTime       @default(now()) @map("created_at")
  updatedAt     DateTime       @updatedAt @map("updated_at")
  
  tenant        Tenant         @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  uploadedBy    User           @relation("DocumentUploader", fields: [uploaderId], references: [id])
  cases         Case?          @relation(fields: [case_id], references: [id])

  @@unique([tenantId, file_url])
  @@index([tenantId])
  @@index([tenantId, type])
  @@map("documents")
}

// ■■ Notifications ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■

model Notification {
  id           String            @id @default(cuid())
  tenantId     String            @map("tenant_id")
  level        NotificationLevel
  motif        NotificationMotif
  title        String?
  message      String?           @db.VarChar(500)
  createdById  String            @map("created_by_id")
  recipientIds String[]          @map("recipient_ids")
  readByIds    String[]          @map("read_by_ids")
  caseId       String?           @map("case_id")
  createdAt    DateTime          @default(now()) @map("created_at")
  
  tenant       Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  createdBy    User              @relation("NotificationCreator", fields: [createdById], references: [id], onDelete: Cascade)
  case         Case?             @relation("CaseNotifications", fields: [caseId], references: [id], onDelete: SetNull)

  @@index([tenantId])
  @@index([tenantId, level])
  @@map("notifications")
}

// ■■ Notification Templates ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■

model NotificationTemplate {
  id             String            @id @default(cuid())
  tenantId       String            @map("tenant_id")
  name           String
  level          NotificationLevel
  motif          NotificationMotif
  title          String?
  message        String?           @db.VarChar(500)
  recipientRoles String[]          @map("recipient_roles")
  createdById    String            @map("created_by_id")
  createdAt      DateTime          @default(now()) @map("created_at")

  tenant      Tenant  @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  createdBy   User    @relation("TemplateCreator", fields: [createdById], references: [id])

  @@index([tenantId])
  @@map("notification_templates")
}

// ■■ Scheduled Notifications ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■

model ScheduledNotification {
  id             String            @id @default(cuid())
  tenantId       String            @map("tenant_id")
  level          NotificationLevel
  motif          NotificationMotif
  title          String?
  message        String?           @db.VarChar(500)
  recipientRoles String[]          @map("recipient_roles")
  scheduledAt    DateTime          @map("scheduled_at")
  status         String            @default("PENDING") // PENDING | SENT | CANCELLED
  jobId          String?           @map("job_id")
  caseId         String?           @map("case_id")
  createdById    String            @map("created_by_id")
  createdAt      DateTime          @default(now()) @map("created_at")

  tenant    Tenant  @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  createdBy User    @relation("ScheduledNotifCreator", fields: [createdById], references: [id])
  case      Case?   @relation("CaseScheduledNotifs", fields: [caseId], references: [id], onDelete: SetNull)

  @@index([tenantId])
  @@index([scheduledAt, status])
  @@map("scheduled_notifications")
}

// ■■ Other Models ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■

model Client {
  id          String   @id @default(uuid())
  tenantId    String   @map("tenant_id")
  name        String
  email       String?
  phone       String?
  address     String?
  type_client String
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")
  tenant      Tenant   @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  cases       Case[]

  @@index([tenantId])
  @@map("clients")
}

model Deadline {
  id        String   @id @default(uuid())
  tenantId  String   @map("tenant_id")
  caseId    String?  @map("case_id")
  title     String
  dueAt     DateTime @map("due_at")
  priority  String   @default("MEDIUM")
  isDone    Boolean  @default(false) @map("is_done")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  case      Case?    @relation(fields: [caseId], references: [id], onDelete: Cascade)
  tenant    Tenant   @relation(fields: [tenantId], references: [id], onDelete: Cascade)

  @@index([tenantId])
  @@index([caseId])
  @@map("deadlines")
}

model Invitation {
  id        String   @id @default(uuid())
  tenantId  String   @map("tenant_id")
  email     String
  role      Role     @default(LAWYER)
  token     String   @unique
  expiresAt DateTime @map("expires_at")
  used      Boolean  @default(false)
  createdAt DateTime @default(now()) @map("created_at")
  tenant    Tenant   @relation(fields: [tenantId], references: [id], onDelete: Cascade)

  @@index([tenantId])
  @@index([token])
  @@map("invitations")
}

model AuditLog {
  id        String   @id @default(uuid())
  tenantId  String   @map("tenant_id")
  userId    String   @map("user_id")
  action    String
  entity    String
  entityId  String   @map("entity_id")
  details   Json?
  ipAddress String?  @map("ip_address")
  createdAt DateTime @default(now()) @map("created_at")
  tenant    Tenant   @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id])

  @@index([tenantId])
  @@index([userId])
  @@map("audit_logs")
}

model ChatConversation {
  id        String        @id @default(uuid())
  tenantId  String        @map("tenant_id")
  userId    String        @map("user_id")
  title     String        @default("Nouvelle conversation")
  createdAt DateTime      @default(now()) @map("created_at")
  updatedAt DateTime      @updatedAt @map("updated_at")
  tenant    Tenant        @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  user      User          @relation(fields: [userId], references: [id])
  messages  ChatMessage[]

  @@index([tenantId])
  @@index([userId])
  @@map("chat_conversations")
}

model ChatMessage {
  id             String           @id @default(uuid())
  conversationId String           @map("conversation_id")
  role           String
  content        String
  sources        Json?
  createdAt      DateTime         @default(now()) @map("created_at")
  conversation   ChatConversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)

  @@index([conversationId])
  @@map("chat_messages")
}
